Fix footer being cutoff when very long ratio

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -97,7 +97,7 @@
     .mainmenu-area .logo {
         margin-left: 15px;
     }
-    #beluga{
+    #angler{
         width: 60vw;
         height:60vw;
         transform: scaleX(-1) translateX(0);
